--- a/mokepon.html
+++ b/mokepon.html
@@ -27,8 +27,8 @@
 
     <section id="seleccionar-ataque">
         <h2>Elige tu ataque!</h2>
-        <p>Tu mascotata es <span id="mascota-jugador"></span> y tienen <span>3</span> vidas</p>
-        <p>La mascota del enemigo es <span id="mascota-enemigo"></span> y tiene <span>3</span> vidas</p>
+        <p>Tu mascotata es <span id="mascota-jugador"></span> y tienen <span id="vidas-jugador">3</span> vidas</p>
+        <p>La mascota del enemigo es <span id="mascota-enemigo"></span> y tiene <span id="vidas-enemigo">3</span> vidas</p>
 
         <p>
             <button id="boton-fuego">Fuego 🔥</button>
