--- a/mokepon.html
+++ b/mokepon.html
@@ -7,26 +7,30 @@
     <title>Mokepon!</title>
     <script src="./js/mokepon.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Ruslan+Display&display=swap'); </style>
 </head>
 <body>
-    <h1 id="title">MOKEPON! 🔥💧🌱</h1>
+    
     <section id="seleccionar-mascota">
-        <h2>Elige tu mascota:</h2>
-        
-        <label for="hipodoge">Hipodoge</label>
-        <input type="radio" name="mascota" id="hipodoge"/>
+        <h1 id="title">Mokepon!</h1>
 
-        <label for="capipepo">Capipepo</label>
-        <input type="radio" name="mascota" id="capipepo"/>
+        <h2 class="subtitulo">Elige tu mascota:</h2>
+        <div class="tarjetas">
+            <label class="tarjeta-de-mokepon" for="hipodoge">Hipodoge</label>
+            <input type="radio" name="mascota" id="hipodoge"/>
 
-        <label for="ratigueya">Ratigueya</label>
-        <input type="radio" name="mascota" id="ratigueya">
+            <label class="tarjeta-de-mokepon" for="capipepo">Capipepo</label>
+            <input type="radio" name="mascota" id="capipepo"/>
+
+            <label class="tarjeta-de-mokepon" for="ratigueya">Ratigueya</label>
+            <input type="radio" name="mascota" id="ratigueya"> 
+        </div>
         <button id="boton-mascota">Seleccionar</button>
-
-
-    </section>
+    <section>
 
     <section id="seleccionar-ataque">
+        <h1 id="title">MOKEPON!</h1>
+
         <h2>Elige tu ataque!</h2>
         <p>Tu mascotata es <span id="mascota-jugador"></span> y tienen <span id="vidas-jugador">3</span> vidas</p>
         <p>La mascota del enemigo es <span id="mascota-enemigo"></span> y tiene <span id="vidas-enemigo">3</span> vidas</p>
